puse un h2 en el html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>hello world</h1>
     h1 mi primer ñ con github
+    <h2>vamos a realizar un cambio para subir a git</h2>
     
 </body>
 </html>
