subiendo cambios al  clon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>hello world</h1>
     h1 mi primer ñ con github
     <h2>vamos a realizar un cambio para subir a git</h2>
-    
+    <h3>agregando items al clon </h3>
 </body>
 </html>
