--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     h1 mi primer ñ con github
     <h2>vamos a realizar un cambio para subir a git</h2>
     <h3>agregando items al clon </h3>
+    agregando desde el git
 </body>
 </html>
